--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 
 # Google Gemini key 
-GEMINI_API_KEY=AIzaSyBcQ8UzfG9ohIfTfdDlDFJDBgS0qqXkzCA
+GEMINI_API_KEY=
 
 # Flask or debug settings
 FLASK_ENV=development
